[workspace]
members = [
    "frame/attestor",
    "frame/bridge",
    "frame/bridgetransfer",
    "frame/daoportal",
    "frame/geode",
    "frame/liveness",
    "frame/transfer",
    "frame/witness",
    "frame/vesting",
    "frame/economics",
    "frame/game",
    "primitives",
    "node-template/node",
    "node-template/pallets/template",
    "node-template/runtime",
    "traits",
]

[profile.release]
# Automata runtime requires unwinding.
panic = "unwind"

