[workspace]
members = [
    "frame/attestor",
    "frame/bridge",
    "frame/bridgetransfer",
    "frame/daoportal",
    "frame/daoportal/rpc",
    "frame/daoportal/rpc/runtime-api",
    "frame/geode",
    "frame/order",
    "frame/geodesession",
    "frame/transfer",
    "frame/witness",
    "frame/vesting",
    "frame/economics",
    "frame/game",
    "frame/gmetadata",
    "frame/gmetadata/rpc",
    "frame/gmetadata/rpc/runtime-api",
    "primitives",
    "node-template/node",
    "node-template/pallets/template",
    "node-template/runtime",
    "traits",
]

[profile.release]
# Automata runtime requires unwinding.
panic = "unwind"

[patch.crates-io.ed25519]
git = "https://github.com/RustCrypto/signatures.git"
tag = "ed25519/v1.3.0"
