[package]
authors = ["Automata Team"]
description = 'FRAME pallet for defining daoportal related logic.'
edition = '2018'
homepage = 'https://www.ata.network/'
license = 'Apache-2.0'
name = 'pallet-daoportal'
repository = "https://github.com/automata-network/automata-common"
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde_json = { version = "1", optional = true }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-support = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
frame-system = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
sp-runtime = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
sp-std = {git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
sp-core = {git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
sp-io = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
primitives = { package = "automata-primitives", path = "../../primitives", default-features = false }
frame-benchmarking = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false, optional = true }
pallet-timestamp = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-core = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
pallet-balances = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
pallet-timestamp = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }

[features]
default = ['std']
std = [
	'serde',
	'serde_json',
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'primitives/std',
    'frame-support/std',
    'frame-system/std',
]
runtime-benchmarks = [
    "frame-benchmarking"
]
