[package]
authors = ["Automata Team"]
description = 'FRAME pallet for defining liveness related logic.'
edition = '2018'
homepage = 'https://www.ata.network/'
license = 'Apache-2.0'
name = 'pallet-liveness'
repository = "https://github.com/automata-network/automata-common"
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
frame-support = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
sp-std = {git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock', default-features = false }
serde_json = { version = "1", optional = true }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
sp-runtime = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }

# local dependencies
primitives = { package = "automata-primitives", path = "../../primitives", default-features = false }
pallet-attestor = { default-features = false, path = '../attestor' }
pallet-geode = { default-features = false, path = '../geode' }
pallet-service = { version = "0.1.0", default-features = false, path = '../service' }
automata-traits = { package = "automata-traits", path = "../../traits", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
sp-io = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
pallet-balances = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
pallet-accounting = { path = "../accounting"}

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-runtime/std',
    'serde',
	'serde_json',
]