[package]
name = "node-template"
version = "3.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', features = ["wasmtime"] }
sp-core = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-executor = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', features = ["wasmtime"] }
sc-service = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', features = ["wasmtime"] }
sc-telemetry = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-keystore = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-inherents = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-transaction-pool = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-transaction-pool-api = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-consensus-aura = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-consensus-aura = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-consensus = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-consensus = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-finality-grandpa = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-finality-grandpa = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-client-api = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-runtime = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-timestamp = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }

# These dependencies are used for the node template's RPCs
jsonrpc-derive = '15.0.0'
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-pubsub = "15.0.0"

fp-rpc = { default-features = false, git = 'https://github.com/automata-network/frontier', branch='master'}
fc-rpc = { default-features = false, git = 'https://github.com/automata-network/frontier', branch='master'}
fc-rpc-core = { default-features = false, git = 'https://github.com/automata-network/frontier', branch='master'}
fc-db = { default-features = false, git = 'https://github.com/automata-network/frontier', branch='master'}

sc-rpc = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-std = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-api = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-rpc-api = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-blockchain = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-storage = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-block-builder = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sc-basic-authorship = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
substrate-frame-rpc-system = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
pallet-transaction-payment-rpc = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
futures = { version = "0.3.1", features = ["compat"] }
futures-util = { version = "0.3.1", features = ["compat", "sink"] }

# local dependencies
pallet-daoportal-rpc = { path = "../../frame/daoportal/rpc" }
pallet-gmetadata-rpc = { path = "../../frame/gmetadata/rpc" }
pallet-attestor-rpc = { path = "../../frame/attestor/rpc" }
pallet-geode-rpc = { path = "../../frame/geode/rpc" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
frame-benchmarking-cli = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }

node-template-runtime = { version = "3.0.0", path = "../runtime" }
automata-primitives = { path = "../../primitives" }
log = { version = "0.4.17" }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
