[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
name = 'pallet-template'
version = "3.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
frame-system = { default-features = false,  git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
frame-benchmarking = { default-features = false,  git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock', optional = true }

[dev-dependencies]
serde = { version = "1.0.126" }
sp-core = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
sp-io = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }
sp-runtime = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10-unlock' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
